--- a/login/login.css
+++ b/login/login.css
@@ -7,7 +7,7 @@
 }
 
 .auth-box {
-  background: rgb(90 44 44 / 80%);
+  background: var(--card-background);
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
