--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -23,7 +23,7 @@
 /* 메뉴 카드 스타일 */
 .menu-cards { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
 
-.menu-card { background: rgba(0, 0, 0, 0.3); border-radius: 12px; overflow: hidden; transition: transform 0.2s ease; cursor: pointer; }
+.menu-card { background: rgba(255, 255, 255, 0.05); border-radius: 12px; overflow: hidden; transition: transform 0.2s ease; cursor: pointer; }
 
 .menu-card:hover { transform: translateY(-3px); }
 
@@ -58,22 +58,22 @@
 
 .middle-container h2{ font-size: 18px; margin: 0; color: #f0d6aa; padding-bottom: 20px; }
 
-.popular-content, .recent-update-content{ background: rgb(56, 45, 45); }
+.popular-content, .recent-update-content{ background: var(--card-background); border-bottom: solid 3px var(--border-red); }
 
-.popular-content{ width: 100%; max-width: 1200px; height: fit-content; min-height : 200px; box-sizing: border-box; border:none; padding: 20px; border-radius: 12px; margin: 0px auto 0px auto; }
+.popular-content{ width: 100%; max-width: 1200px; height: fit-content; min-height : 200px; box-sizing: border-box; padding: 20px; border-radius: 12px; margin: 0px auto 0px auto; }
 
- .character-cards{ display: flex; flex-direction: row; flex-wrap: nowrap; align-items: flex-start; gap: 20px; overflow-x: auto; overflow-y: hidden; -webkit-overflow-scrolling: touch; padding: 20px 0 0px 0; }
+ .character-cards{ display: flex; flex-direction: row; flex-wrap: nowrap; align-items: flex-start; gap: 20px; overflow-x: auto; overflow-y: hidden; -webkit-overflow-scrolling: touch; padding: 0px 0 0px 0; }
  .character-cards::-webkit-scrollbar{ height: 8px; }
  .character-cards::-webkit-scrollbar-thumb{ background: rgba(255, 255, 255, 0.15); border-radius: 8px; }
  .character-cards::-webkit-scrollbar-track{ background: rgba(0, 0, 0, 0.15); border-radius: 8px; }
  
  .character-card{ cursor: pointer; position: relative; flex: 0 0 auto; }
  
- .character-card-img{ width: 98px; height: 140px; background: rgba(0, 0, 0, 0.2); border-radius: 12px; transition: all 0.3s ease; }
+ .character-card-img{ width: 98px; height: 140px; background: rgba(255, 255, 255, 0.05); border-radius: 8px 8px 0px 0px; transition: all 0.3s ease; }
 
 .character-card-img img{ width: 98px; height: 100%; border-radius: 8px 8px 0px 0px; object-fit: cover; opacity: 1; }
 
- .character-card-text{ width: 100%; height: 100%; background: rgba(0, 0, 0, 0.2); border-radius: 0px 0px 8px 8px; text-align: center; margin: 0; padding: 6px 0px; }
+ .character-card-text{ width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); border-radius: 0px 0px 8px 8px; text-align: center; margin: 0; padding: 6px 0px; max-width:98px; white-space:nowrap; overflow:hidden;  text-overflow:ellipsis; }
  
  .character-card.new::after{
    content: 'NEW';
@@ -110,19 +110,19 @@
 
 .character-card:hover .character-card-text p{ color: #fff; }
 
-.character-card:hover .character-card-img{ background: rgba(255, 255, 255, 0.1); }
+.character-card:hover .character-card-img{ background: rgba(255, 255, 255, 0.1); overflow: hidden; transition: all 0.3s ease; }
 
- .character-card:hover .character-card-img img{ filter: grayscale(0%); opacity: 1; }
+ .character-card:hover .character-card-img img{ filter: grayscale(0%); opacity: 1; scale: 1.05; overflow: hidden; transition: all 0.3s ease; }
 
 
 /* 가이드 컨테이너 */
-.guides-container { padding: 20px; width: 100%; max-width: 1200px; margin: 0 auto; box-sizing: border-box; background: #3d3030; border-radius: 12px; margin-bottom: 24px; }
+.guides-container { padding: 20px; width: 100%; max-width: 1200px; margin: 0 auto; box-sizing: border-box; background: var(--card-background); border-radius: 12px; margin-bottom: 24px;  border-bottom: solid 3px var(--border-red); }
 
-.guides-container h2 { font-size: 18px; margin: 0; color: #f0d6aa; padding-bottom: 20px; }
+.guides-container h2 { font-size: 18px; margin: 0; color: white; padding-bottom: 20px; }
 
 .guide-cards { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 20px; }
 
-.guide-card { display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.3); border-radius: 8px; overflow: hidden; transition: transform 0.2sease; padding: 20px 20px 24px 20px; }
+.guide-card { display: flex; flex-direction: column; background: rgba(0, 0, 0, 0.15); border-radius: 8px; overflow: hidden; transition: transform 0.2sease; padding: 20px 20px 24px 20px; }
 
 .guide-card-header{ width: fit-content; display: flex; align-items: center; gap: 10px; color: rgb(255, 255, 255, 0.9); font-size: 14px; margin-top: 0; margin-bottom: 10px; position: relative; white-space: nowrap; }
 
@@ -174,8 +174,8 @@
 
     .popular-content{ padding: 16px; border-radius: 12px; }
     .character-cards{ gap: 16px; padding-bottom: 16px; }
-    .character-card-img{ width: 72px; height: 100px; }
-    .character-card-img img{ width: 72px; }
+    .character-card-img{ width: 80px; height: 100px; }
+    .character-card-img img{ width: 80px; }
     .character-card-text p{ font-size: 11px; }
  }
 
