--- a/assets/css/tactic-posts.css
+++ b/assets/css/tactic-posts.css
@@ -1,12 +1,12 @@
-.posts-container { width: 100%; max-width: 1200px; box-sizing: border-box; margin: 0 auto; padding: 20px 20px 24px 20px; background: rgb(56, 45, 45); border-radius: 12px; overflow: hidden; transition: transform 0.2s ease; cursor: pointer; z-index: 1; margin-bottom: 24px; }
+.posts-container { width: 100%; max-width: 1200px; box-sizing: border-box; margin: 0 auto; padding: 20px 20px 24px 20px; background: var(--card-background);  border-bottom: solid 3px var(--border-red); border-radius: 12px; overflow: hidden; transition: transform 0.2s ease; cursor: pointer; z-index: 1; margin-bottom: 24px; }
 
 .posts-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
 
-.posts-header h2{ font-size: 18px; margin: 0; margin-left: 2px; color: #f0d6aa; }
+.posts-header h2{ font-size: 18px; margin: 0; margin-left: 2px; color:white; }
 
-.posts-header h2 a { color: inherit; text-decoration: none; }
+.posts-header h2 a { color: white; text-decoration: none; }
 
-.posts-header h2 a:hover { text-decoration: none; color: #f3e2c5; }
+.posts-header h2 a:hover { text-decoration: none; color: #f3c5c5; }
 
 
 .show-more-posts-btn { background: none; border: none; color: rgb(255, 255, 255, 0.5); font-size: 12px; margin-right: 2px; cursor: pointer; padding: 0; text-decoration: none; }
@@ -41,7 +41,7 @@
 
 .posts-list { display: flex; flex-direction: column; gap: 1rem; }
 
-.post-item { display: grid; grid-template-columns: 1fr 1fr 80px; padding: 16px 20px; background: rgb(0, 0, 0, 0.2); border: none; border-radius: 8px; justify-content: center; align-items: center; }
+.post-item { display: grid; grid-template-columns: 1fr 1fr 80px; padding: 16px 20px; background: rgba(0, 0, 0, 0.15); border: none; border-radius: 8px; justify-content: center; align-items: center; }
 
 .post-header{ display: flex; flex-direction: column; justify-content: center; transform: translateY(-2px); }
 
@@ -108,7 +108,7 @@
 
 .pagination button { font-size: 12px; padding: 0.5rem 1rem; background: #007bff; color: white; border: none; border-radius: 24px; cursor: pointer; }
 
-.pagination button:disabled { color: rgba(255, 255, 255, 0.5); background: rgba(0, 0, 0, 0.2); cursor: not-allowed; }
+.pagination button:disabled { color: rgba(255, 255, 255, 0.5); background: rgba(255, 255, 255, 0.05); cursor: not-allowed; }
 
 #currentPage{ font-size: 13px; color: rgb(255, 255, 255, 0.8); }
 
