--- a/assets/css/tiers.css
+++ b/assets/css/tiers.css
@@ -96,9 +96,9 @@ button { cursor: pointer; border: none; transition: 0.5s; }
 
 .filter-group h3 { width: 60px; color: rgb(255, 255, 255, 0.8); margin-bottom: 12px; font-size: 13px; font-weight: 400; outline: none; }
 
-.filter-options { display: flex; flex-wrap: wrap; gap: .5rem; margin-right: 0px; padding-right: 0px; }
+.filter-options { display: flex; flex-wrap: wrap; gap: .6rem; margin-right: 0px; padding-right: 0px; }
 
-.filter-options label { height: 32px; display: flex; align-items: center; justify-content: center; color: #fff; cursor: pointer; border-radius: 32px; padding: 0px 6px 0px 6px; transition: all 0s; background-color: rgba(0, 0, 0, 0.6); outline: none; }
+.filter-options label { height: 32px; display: flex; align-items: center; justify-content: center; color: #fff; cursor: pointer; border-radius: 32px; padding: 0px 6px 0px 6px; transition: all 0s; background-color: var(--card-background); outline: none; }
 
 .filter-options label:hover { filter: brightness(1.1); background-color: rgb(255, 255, 255, 0.4); }
 
@@ -107,7 +107,10 @@ button { cursor: pointer; border: none; transition: 0.5s; }
 .filter-options input[type="checkbox"]:checked + .star-container { filter: brightness(1.2); }
 
 .filter-options input[type="checkbox"]:checked ~ label,
-.filter-options label:has(input[type="checkbox"]:checked) { background-color: rgba(0, 0, 0, 0.8); border: 1px solid rgb(211, 188, 142, 0.8); height: 30px; padding: 0px 5px 0px 5px; }
+.filter-options label:has(input[type="checkbox"]:checked) { background-color: rgba(0, 0, 0, 0.15);
+  height: 32px;
+  padding: 0px 6px 0px 6px;
+  box-shadow: 0 0 0 1px #ff00007c inset; }
 
 .filter-options img { width: 20px; height: 20px; object-fit: contain; }
 
